--- a/platform/crates/host/Cargo.toml
+++ b/platform/crates/host/Cargo.toml
@@ -15,6 +15,6 @@ name = "host"
 path = "src/main.rs"
 
 [dependencies]
+roc_std = { git = "https://github.com/roc-lang/roc.git" }
 backtrace = "=0.3.69"
 libc = "=0.2.155"
-roc_std = { path = "../roc_std" }
